--- a/TheTop150.html
+++ b/TheTop150.html
@@ -4,24 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./Format.css">
     <title>Top 150 smm2 TEST</title>
   </head>
   <body>
+    <nav id="navbar">
+      <a href="#">Home Page</a>
+      <a href="#">List Page</a>
+      <a href="#">Leaderboard Page</a>
+      <a href="#">Profile</a>
+    </nav>
     <header id="showcase">
-      <h1>Gays 4 donald</h1>
+      <h1>FrontText</h1>
       <p>This is a test link that should work hopefully</p>
       <a href="#" class="button" onclick="alert('This button was made with HTML')">Read More</a>
       <p id="demo">This is a js button</p>
+      <p id="test">error</p>
       <script>
+	var Daphnes = 2
+
 	document.getElementById("demo").onclick = function() {myFunction()};
 	
 	function myFunction() {
-	    document.getElementById("demo").innerHTML = "testing things";
+	    document.getElementById("demo").innerHTML = Daphnes;
 	}
+
+	function PointCalc(PlaceMent) {
+	    return Math.pow(1.054411903089, ((PlaceMent+40)/1.4))
+	}
+	document.getElementById("test").innerHTML = PointCalc(4 + Daphnes_Finale - 1);
 	
       </script>
     </header>
+
+    <section id="section-stupid">
+      <p>this should be green</p>
+    </section>
     <section id="section-a">
       <p>This is filler text ABCDEFGHIJKLMNOPQRSTUVWXYZ</p>
     </section>
